# funspace-solver

./: .gitignore  Cargo.toml  README.md
benches/: benchmark_hepta.rs  benchmark_penta.rs  benchmark_tetra.rs  benchmark_tri.rs
examples/: hholtz1d_cheb_biharmonic.rs  hholtz1d_cheb_dirichlet.rs  hholtz1d_cheb_dirichlet_neumann.rs  hholtz2d_cheb_dirichlet.rs  poisson1d_cheb_biharmonic.rs  poisson1d_cheb_dirichlet.rs  poisson1d_cheb_dirichlet_neumann.rs  poisson2d_cheb_dirichlet.rs
examples/docs/: doc_hholtz_adi2d.tex  doc_poisson2d.tex
src/: lib.rs  utils.rs
src/hepta/: hepta_2101234.rs  hepta_4202468.rs  mod.rs
src/penta/: mod.rs  penta_21012.rs  penta_42024.rs
src/tetra/: mod.rs  tetra_1012.rs  tetra_2024.rs
src/tri/: mod.rs  tri_101.rs  tri_202.rs
